# smith2

./: .gitmodules  CMakeLists.txt  README.md
include/smith/: drawutil.h  smith.h
src/: main.cc
